[project]
name = "sandbox"
version = "0.0.0"
description = "Add your description here"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "esbonio>=0.16.5",
    "ruff>=0.8.1",
]
